<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/dashboard_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:tint="@color/colorDarkCardBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_dashboard_24" />

                <TextView
                    android:id="@+id/dashboard_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_dashboard"
                    android:textColor="@color/colorDarkCardBackground"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/dashboard_image"
                    app:layout_constraintStart_toEndOf="@+id/dashboard_image"
                    app:layout_constraintTop_toTopOf="@+id/dashboard_image" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/balance_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardBackgroundColor="@color/colorDarkCardBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashboard_title_text">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/balance_amount_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:layout_marginBottom="24dp"
                            android:textColor="@color/colorDarkCardText"
                            android:textSize="36sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/currency_text"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/balance_header_text"
                            tools:text="₹3,500" />

                        <TextView
                            android:id="@+id/balance_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="24dp"
                            android:text="@string/balance"
                            android:textColor="@color/colorDarkCardText"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/currency_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp"
                            android:text="@string/inr"
                            android:textColor="@color/colorDarkCardText"
                            app:layout_constraintBaseline_toBaselineOf="@+id/balance_amount_text"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/income_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:cardBackgroundColor="@color/colorDarkCardBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toStartOf="@+id/expense_card"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/balance_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/income_amount_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/colorDarkCardText"
                            android:textSize="36sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rising_image"
                            tools:text="₹3,500" />

                        <TextView
                            android:id="@+id/income_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/income"
                            android:textColor="@color/colorDarkCardText"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/rising_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:tint="@color/colorRisingText"
                            app:layout_constraintBottom_toBottomOf="@+id/income_header_text"
                            app:layout_constraintStart_toEndOf="@+id/income_header_text"
                            app:layout_constraintTop_toTopOf="@+id/income_header_text"
                            app:srcCompat="@drawable/baseline_trending_up_24" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/expense_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    app:cardBackgroundColor="@color/colorDarkCardBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/income_card"
                    app:layout_constraintTop_toBottomOf="@+id/balance_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/expense_amount_text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:textColor="@color/colorDarkCardText"
                            android:textSize="36sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/falling_image"
                            tools:text="₹3,500" />

                        <TextView
                            android:id="@+id/expense_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/expenses"
                            android:textColor="@color/colorDarkCardText"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/falling_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:tint="@color/colorFallingText"
                            app:layout_constraintBottom_toBottomOf="@+id/expense_header_text"
                            app:layout_constraintStart_toEndOf="@+id/expense_header_text"
                            app:layout_constraintTop_toTopOf="@+id/expense_header_text"
                            app:srcCompat="@drawable/baseline_trending_down_24" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/expenses_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/all_transactions_text"
                    tools:layout_editor_absoluteX="3dp"
                    tools:listitem="@layout/list_item_expense" />

                <TextView
                    android:id="@+id/all_transactions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/all_transactions"
                    android:textColor="@color/colorLightCardTextPrimary"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/income_card" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/no_expenses_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_expenses_added"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_expense_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:backgroundTint="@color/colorAccent"
            app:tint="@color/colorDarkCardText"
            app:srcCompat="@drawable/outline_add_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>