<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/income_or_expense_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:tint="@color/colorDarkCardBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/baseline_trending_up_24" />

        <TextView
            android:id="@+id/expense_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorDarkCardBackground"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/income_or_expense_image"
            app:layout_constraintStart_toEndOf="@+id/income_or_expense_image"
            app:layout_constraintTop_toTopOf="@+id/income_or_expense_image"
            tools:text="An income on May 28" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/balance_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="@color/colorDarkCardBackground"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_date_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/expense_amount_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/colorDarkCardText"
                    android:textSize="36sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/currency_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expense_type_text"
                    tools:text="₹3,500" />

                <TextView
                    android:id="@+id/expense_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/colorDarkCardText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Income" />

                <TextView
                    android:id="@+id/currency_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/inr"
                    android:textColor="@color/colorDarkCardText"
                    app:layout_constraintBaseline_toBaselineOf="@+id/expense_amount_text"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.gms.maps.MapView
            android:id="@+id/expense_location_map"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balance_card" />

        <TextView
            android:id="@+id/expense_merchant_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/colorLightCardTextPrimary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_location_map"
            tools:text="@string/merchant" />

        <TextView
            android:id="@+id/expense_desc_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_fab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_merchant_text"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/description" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/edit_fab"
            app:layout_constraintEnd_toStartOf="@+id/edit_fab"
            app:layout_constraintTop_toTopOf="@+id/edit_fab"
            app:srcCompat="@drawable/outline_delete_24"
            app:tint="@color/colorDarkCardText" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/outline_edit_24"
            app:tint="@color/colorDarkCardText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>